# spreed-webrtc

./: .gitignore  .gitmodules  .hound.yml  .javascript_ignore  .jshint  .travis.yml  AUTHORS  CHANGELOG.md  COPYING  ChangeLog  Dockerfile  Dockerfile.build  Dockerfile.run  Godeps  Makefile  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  dependencies.tsv  package.json  server.conf.in  spreed-speakfreely-server  spreed-webrtc-server
debian/: .gitignore  changelog  control  rules  spreed-webrtc-server.dirs  spreed-webrtc-server.docs  spreed-webrtc-server.logrotate  spreed-webrtc-server.postinst  spreed-webrtc-server.service  spreed-webrtc-server.templates
doc/: APACHE.txt  CHANNELING-API.txt  CROSSCOMPILE.txt  NGINX.txt  REST-API.txt  plugin-example.js  plugin-test-authorize.js  testfile.txt
doc/file-sharing-issue/: splitToCrc.py
doc/turn/: block-udp-for-turn-test.sh
go/buffercache/: buffercache.go
go/channelling/: api.go  bus.go  bus_manager.go  client.go  clientstats.go  codec.go  common_test.go  config.go  connection.go  contact.go  contact_manager.go  context.go  data.go  hub.go  imagecache.go  nats.go  pipeline.go  pipeline_manager.go  room_manager.go  room_manager_test.go  roomworker.go  roomworker_test.go  session.go  session_manager.go  sessionattestation.go  sessioncreator.go  sessionstore.go  sessiontoken.go  sessionupdate.go  sink.go  stats_manager.go  tickets.go  tickets_test.go  tokenprovider.go  turndata.go  turnservice_manager.go  unicaster.go  user.go  userstore.go
go/channelling/api/: api.go  api_test.go  handle_authentication.go  handle_chat.go  handle_conference.go  handle_hello.go  handle_leave.go  handle_room.go  handle_self.go  handle_sessions.go  handle_users.go
go/channelling/server/: api.go  config.go  pipelines.go  rooms.go  sessions.go  stats.go  tls.go  tokens.go  users.go
go/natsconnection/: natsconnection.go
go/randomstring/: randomstring.go
html/: crawler.html  extra.html  head.html  logo.html  main.html
html/sandboxes/: odfcanvas_sandbox.html  pdfcanvas_sandbox.html  youtubevideo_sandbox.html
scripts/: docker_entrypoint.sh
src/app/spreed-speakfreely-server/: api.go  buffercache.go  channeling.go  config.go  connection.go  context.go  hub.go  images.go  main.go  random.go  rooms.go  roomworker.go  server.go  session.go  sessions.go  stats.go  tls.go  token.go  tokenprovider.go  tokens.go  user.go  users.go  ws.go  wsdata.go
src/app/spreed-webrtc-server/: api.go  buffercache.go  bus_manager.go  channeling.go  channelling.go  channelling_api.go  channelling_api_test.go  client.go  common_test.go  config.go  connection.go  contact.go  context.go  handler_image.go  handler_main.go  handler_room.go  handler_sandbox.go  handler_wellknown.go  handler_ws.go  hub.go  images.go  incoming_codec.go  main.go  nats.go  random.go  room_manager.go  room_manager_test.go  rooms.go  roomworker.go  roomworker_test.go  server.go  session.go  session_manager.go  sessions.go  stats.go  stats_manager.go  template.go  template_test.go  tickets.go  tls.go  (+8 more)
src/audio/: _build.py  _encode.sh  sprite1.json
src/hooks/: pre-commit.hook
src/i18n/: Makefile  Makefile.am  README.txt  babel.cfg  messages-CN (Mandarin).po  messages-CN (simplified).po  messages-JP.po  messages-KR.po  messages-de.po  messages-es.po  messages-fr.po  messages-it.po  messages-ja.po  messages-ko.po  messages-pt.po  messages-ru.po  messages-tr.po  messages-zh-cn.po  messages-zh-tw.po  messages.pot
src/i18n/helpers/: checkHTML.py  languages.py  po2json  polint.py
src/styles/: Makefile.am  _shame.scss  bootstrap.scss  color-pallete.html  config.rb  csp.scss  font-awesome.scss  main.scss  scss.yml
src/styles/components/: _audiolevel.scss  _audiovideo.scss  _bar.scss  _buddycondensed.scss  _buddylist.scss  _buddypicture.scss  _buddypicturecapture.scss  _buddypictureupload.scss  _chat.scss  _contactsmanager.scss  _fileinfo.scss  _pdfviewer.scss  _presentation.scss  _rightslide.scss  _roombar.scss  _screenshare.scss  _settings.scss  _social.scss  _usability.scss  _webrtc.scss  _youtubevideo.scss  helptour.scss
src/styles/global/: _angular.scss  _animations.scss  _base.scss  _branding.scss  _colors.scss  _loader.scss  _mixins.scss  _nicescroll.scss  _overlaybar.scss  _pages.scss  _variables.scss  _views.scss  _withs.scss
src/styles/global/skins/: _dark.scss  _light.scss
src/styles/global/theme/: _dark.scss
src/styles/libs/: _dialogs.scss  _hidpi.scss  _libs.scss
src/styles/libs/angular/: angular-csp.scss  angular.scss
src/styles/libs/bootstrap/: README.md
src/styles/libs/bootstrap/bootstrap/: bootstrap.scss
src/styles/libs/font-awesome/: README.md
src/styles/libs/font-awesome/fonts/: LISCENCE
src/styles/libs/font-awesome/scss/: LISCENCE
src/styles/libs/fontawesome/: README.md
src/styles/libs/toastr/: toastr.scss
static/css/: bootstrap.min.css  csp.min.css  font-awesome.min.css  main.min.css
static/fonts/: LICENSE
static/js/: app.js  base.js  main.js
static/js/controllers/: appcontroller.js  chatroomcontroller.js  contactsmanagercontroller.js  (+7 more)
static/partials/: audiovideo.html  audiovideopeer.html  buddy.html  buddyactions.html  buddyactionsforaudiomixer.html  buddycondensed.html  buddylist.html  buddypicture.html  buddypicturecapture.html  buddypictureupload.html  chat.html  chatroom.html  contactrequest.html  contactsmanager.html  contactsmanageradd.html  contactsmanagerbutton.html  contactsmanageredit.html  defaultdialog.html  fileinfo.html  geolocation.html  helpoverlay.html  helptour.html  helptourend.html  helptourstart.html  menu.html  odfcanvas_sandbox.html  page.html  pdfcanvas_sandbox.html  pdfviewer.html  picturehover.html  presentation.html  roombar.html  screenshare.html  screensharedialogff.html  screensharepeer.html  settings.html  socialshare.html  statusmessage.html  ui.html  usability.html  (+2 more)
static/translation/: languages.js  messages-de.json  messages-es.json  messages-fr.json  messages-it.json  messages-ja.json  messages-ko.json  messages-pt.json  messages-ru.json  messages-tr.po  messages-zh-cn.json  messages-zh-tw.json
(+149 files in other folders)
